# LSM6DS3TR

./: .gitignore  AGENTS.md  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Doxyfile  LSM6DS3TR_imu_implementation_manual.md  README.md  SECURITY.md  idf_component.yml  library.json  platformio.ini
.github/workflows/: ci.yml
docs/: DOCUMENTATION.md  HIL_VALIDATION.md  IDF_PORT.md  IDF_PORT_IMPLEMENTATION.md  LSM6DS3TRC_INDUSTRY_READINESS_AUDIT.md  README.md  TUNNELMONITOR_NODE_SUITABILITY_AUDIT.md  tunnelmonitor_fit_report.md
docs/design_tips/: calibration_1_or_3_point.md  computing_tilt.md  dead_reckoning.md  noise_analysis.md  updating_tilt_measurement.md
docs/extracted-md/: 00_document_inventory.md  01_chip_overview.md  02_pinout_and_signals.md  03_electrical_and_timing.md  04_protocol_commands_and_transactions.md  05_register_map.md  06_modes_interrupts_status_and_faults.md  07_initialization_reset_and_operational_notes.md  08_variant_and_source_notes.md  08_variant_differences_and_open_questions.md
docs/pdf-extracted-md/: LSM6DS3TR-C_Always-On_3D_Accelerometer_3D_Gyroscope_Application_Note_AN5130.md  LSM6DS3TR-C_datasheet.md  computing_tilt.md  (+4 more)
examples/idf/basic/main/: Arduino.h  ArduinoCompat.cpp  CMakeLists.txt  Wire.h  main.cpp
scripts/: generate_version.py
src/: LSM6DS3TR.cpp  PlatformTime.h
test/: test_basic.cpp  test_compile_contracts.cpp
tools/: build_docs.py  check_chip_docs_coverage.py  check_cli_contract.py  check_core_timing_guard.py  check_idf_example_contract.py  check_package_contract.py  hil_smoke.py  run_hil.py  run_owner_soak.py
(+99 files in other folders)
